--- a/.github/workflows/java-gradle_starter_pipeline.yml
+++ b/.github/workflows/java-gradle_starter_pipeline.yml
@@ -115,9 +115,9 @@ jobs:
 # Ignore next 5 parameters (with cq_*) if run_code_quality_analysis is false
 # If the fag is true, Provide the Sonar URL, Project name or ProjectKey and the Sonar token to connect.
         cq_host_url:  ${{env.SONAR_CLOUD_URL }}
-        cq_project_name: ${{ secrets.SONAR_CLOUD_URL_JAVA }}
-        cq_project_key: ${{ secrets.SONAR_PROJECT_KEY_JAVA }} 
-        cq_token: ${{ secrets.SONAR_TOKEN_JAVA }}
+        cq_project_name: ${{ secrets.SONAR_CLOUD_URL_GRADLE }}
+        cq_project_key: ${{ secrets.SONAR_PROJECT_KEY_GRADLE }} 
+        cq_token: ${{ secrets.SONAR_TOKEN }}
         cq_scan_arguments: -Dsonar.organization=digitalinnovation 
 
 # Flag to include Creation of Container Image and Push to Registry       
