--- a/.github/workflows/npm_build_starter_pipeline.yml
+++ b/.github/workflows/npm_build_starter_pipeline.yml
@@ -167,9 +167,9 @@ jobs:
         build_file_name: package.json
         build_file_path: .
         cq_host_url: ${{env.SONAR_CLOUD_URL }}
-        cq_project_name: ${{ secrets.SONAR_PROJECT_NAME_NODE }}
-        cq_project_key: ${{ secrets.SONAR_PROJECT_KEY_NODE }} 
-        cq_token: ${{ secrets.SONAR_TOKEN_NODE }}
+        cq_project_name: ${{ secrets.SONAR_PROJECT_NAME_NPM }}
+        cq_project_key: ${{ secrets.SONAR_PROJECT_KEY_NPM }} 
+        cq_token: ${{ secrets.SONAR_TOKEN }}
         cq_scan_arguments: -Dsonar.organization=digitalinnovation
           
         
