--- a/.github/workflows/java-maven_starter_pipeline.yml
+++ b/.github/workflows/java-maven_starter_pipeline.yml
@@ -165,8 +165,8 @@ jobs:
         settings_file_name: settings.xml 
         settings_file_path: . 
         cq_host_url: ${{env.SONAR_CLOUD_URL }}
-        cq_project_name: ${{ secrets.SONAR_PROJECT_NAME_MAVEN }} 
-        cq_project_key: ${{ secrets.SONAR_PROJECT_KEY_MAVEN }} 
+        cq_project_name: cloud-devsecops-pipelineactions
+        cq_project_key: DigitalInnovation_cloud-devsecops-pipelineactions
         cq_token: ${{ secrets.SONAR_TOKEN }} 
         cq_scan_arguments: -Dsonar.organization=digitalinnovation 
           
