--- a/.github/workflows/java-gradle_starter_pipeline.yml
+++ b/.github/workflows/java-gradle_starter_pipeline.yml
@@ -6,7 +6,7 @@ on:
     types: [assigned, opened, synchronize, reopened]
     paths-ignore:
       - docs/**
-      - "**.md"
+      #- "**.md"
       - mkdocs.yml
       - catalog-info.yaml
 
@@ -115,8 +115,8 @@ jobs:
 # Ignore next 5 parameters (with cq_*) if run_code_quality_analysis is false
 # If the fag is true, Provide the Sonar URL, Project name or ProjectKey and the Sonar token to connect.
         cq_host_url:  ${{env.SONAR_CLOUD_URL }}
-        cq_project_name: ${{ secrets.SONAR_CLOUD_URL_GRADLE }}
-        cq_project_key: ${{ secrets.SONAR_PROJECT_KEY_GRADLE }} 
+        cq_project_name: cloud-devsecops-pipelineactions
+        cq_project_key: DigitalInnovation_cloud-devsecops-pipelineactions
         cq_token: ${{ secrets.SONAR_TOKEN }}
         cq_scan_arguments: -Dsonar.organization=digitalinnovation 
 
