--- a/.github/workflows/npm_build_starter_pipeline.yml
+++ b/.github/workflows/npm_build_starter_pipeline.yml
@@ -5,7 +5,7 @@ on:
     types: [assigned, opened, synchronize, reopened]
     paths-ignore:
       - docs/**
-      - "**.md"
+      #- "**.md"
       - mkdocs.yml
       - catalog-info.yaml
 
@@ -167,8 +167,8 @@ jobs:
         build_file_name: package.json
         build_file_path: .
         cq_host_url: ${{env.SONAR_CLOUD_URL }}
-        cq_project_name: ${{ secrets.SONAR_PROJECT_NAME_NPM }}
-        cq_project_key: ${{ secrets.SONAR_PROJECT_KEY_NPM }} 
+        cq_project_name: cloud-devsecops-pipelineactions
+        cq_project_key: DigitalInnovation_cloud-devsecops-pipelineactions 
         cq_token: ${{ secrets.SONAR_TOKEN }}
         cq_scan_arguments: -Dsonar.organization=digitalinnovation
           
