--- a/.github/workflows/java-maven_starter_pipeline.yml
+++ b/.github/workflows/java-maven_starter_pipeline.yml
@@ -5,9 +5,11 @@ on:
     types: [assigned, opened, synchronize, reopened]
     paths-ignore:
       - docs/**
-      - "**.md"
+      #- "**.md"
       - mkdocs.yml
       - catalog-info.yaml
+      - .github/workflows/semantic_versioning.yml
+      - .github/release.yml
   #push:
     #branches: [ main ]
   
@@ -62,7 +64,52 @@ env:
   
   
 jobs:
+    # TO get the changes from the pull request branch, below job will create a new branch from pull request branch and replace @<version> with @new branch
+  pre-composite-action-setup:
+    environment: Non-prod
+    runs-on: ubuntu-latest
+    outputs: 
+      new-branch: ${{ steps.check.outputs.new-branch }}
+    steps:
+      - name: Removing New composite config Pull branch
+        run: |
+          curl -X DELETE -H "Accept: application/vnd.github+json" -H "Authorization: token ${{secrets.SAML_GITHUB_TOKEN}}" https://api.github.com/repos/Test-Spike/composite-actions/git/refs/heads/maven-pull-branch
+      - id: pull
+        run: |
+             pull_branch=$(jq --raw-output .pull_request.head.ref "$GITHUB_EVENT_PATH")
+             echo "Pull request Branch: $pull_branch"
+             echo "::set-output name=pull_branch::$pull_branch"
+      - uses: actions/checkout@v3
+        with:
+          ref: ${{ steps.pull.outputs.pull_branch}}
+      - run: |
+          tag=$(curl -s -H "Accept: application/vnd.github.v3+json" -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/DigitalInnovation/cloud-devsecops-pipelineactions/releases/latest" | jq -r '.tag_name')
+          echo "CURRENT TAG: $tag"
+          echo "::set-output name=old_version::$tag"
+          b=(${tag//"-"/ })
+          #t=${b[0]}
+          t=v1.0.22
+          git config --global user.name 'Y9886988'
+          git config --global user.email 'Y9886988@mnscorp.onmicrosoft.com'
+          git clone https://Y9886988:${{secrets.SAML_GITHUB_TOKEN}}@github.com/DigitalInnovation/cloud-devsecops-pipelineactions.git
+          cd cloud-devsecops-pipelineactions
+          git checkout ${{ steps.pull.outputs.pull_branch}}
+          git checkout -b maven-pull-branch
+          echo "***************Printing $t mentioned places****************"
+          grep -rn "@$t" *  
+          echo "******************Replacing $t with maven-pull-branch in all action.yml files*******************"
+          find ./ -type f -exec sed -i -e "s|@$t|@maven-pull-branch|g" {} \;
+          echo "Replacing $t with maven-pull-branch in all action.yml files"
+          echo "******************After replacing new version, Printing  mentioned places**************************"
+          grep -rn "@maven-pull-branch" *
+          echo "*********************Pushing changes into the main branch***********************"
+          git add .
+          git commit -am "Replacing $t with maven-pull-branch in all action.yml files"
+          git push origin maven-pull-branch
+
+
   pre-work-setup:
+    needs: [pre-composite-action-setup]
     runs-on: ubuntu-latest
     outputs:
       GH_REGISTRY_SERVER_LOWERCASE: ${{ steps.get_gh_registry.outputs.GH_REGISTRY_LOWER }}
@@ -91,7 +138,7 @@ jobs:
         ref: main
     
     - name: ========== Build and push Build Artifacts to artifact Store ==========
-      uses: DigitalInnovation/cloud-devsecops-pipelineactions/workflows/CI@latest
+      uses: DigitalInnovation/cloud-devsecops-pipelineactions/workflows/CI@maven-pull-branch
       with:
        
 # provide the project Build tool,  build file path and its relative location
@@ -156,7 +203,7 @@ jobs:
         ref: main
 
     - name: ========== Run Code Quality Scan ==========
-      uses: DigitalInnovation/cloud-devsecops-pipelineactions/workflows/codequality@latest
+      uses: DigitalInnovation/cloud-devsecops-pipelineactions/workflows/codequality@maven-pull-branch
       with:
 # Provide the Sonar URL, Project name or ProjectKey and the Sonar token to connect.
         build_tool: maven
@@ -183,7 +230,7 @@ jobs:
 #     - uses: actions/checkout@v3
 #     - name: =========  Build and push image to Container Registry. ===========
 #  # you can also add this as part of the build workflow by setting the build_and_push_container_image: true
-#       uses: DigitalInnovation/cloud-devsecops-pipelineactions/workflows/CI/push_image@latest
+#       uses: DigitalInnovation/cloud-devsecops-pipelineactions/workflows/CI/push_image@maven-pull-branch
 #       with:
         
 #  # Provide the Dockerfile name and its relative path to build the image
@@ -219,7 +266,7 @@ jobs:
         token: ${{ secrets.SAML_GITHUB_TOKEN }}
         ref: main
        
-    - uses: DigitalInnovation/cloud-devsecops-pipelineactions/workflows/appsec@latest
+    - uses: DigitalInnovation/cloud-devsecops-pipelineactions/workflows/appsec@maven-pull-branch
       with:
 # Set Falg to true if you want to run Dependency (SNYK) Scan,provide Name of the project Example: Test and Token should be created as GitHub secret
         application_name: ${{env.APPLICATION_NAME}}  # Name of your Application
@@ -267,7 +314,7 @@ jobs:
           ref: main
 
       - name: Deploy application 
-        uses: DigitalInnovation/cloud-devsecops-pipelineactions/workflows/CD@latest
+        uses: DigitalInnovation/cloud-devsecops-pipelineactions/workflows/CD@maven-pull-branch
         with:
           # Flag to verify if this is helm deployment
           is_helm_deployment: true
@@ -308,7 +355,7 @@ jobs:
         ref: main
      
     - name: 'Deploy to Azure WebApp'
-      uses: DigitalInnovation/cloud-devsecops-pipelineactions/workflows/CD@latest
+      uses: DigitalInnovation/cloud-devsecops-pipelineactions/workflows/CD@maven-pull-branch
       with:
         is_azure_webapp_deployment: true
         environment: dev # this is app specific variable if you need   
@@ -339,7 +386,7 @@ jobs:
     continue-on-error: true
     steps:
     - name: New Relic deployment marker
-      uses: DigitalInnovation/cloud-devsecops-pipelineactions/workflows/observability@latest
+      uses: DigitalInnovation/cloud-devsecops-pipelineactions/workflows/observability@maven-pull-branch
       with: 
         set_newRelic_Deployment_marker: true
  # provide Newrelic API Key,Account ID,Application ID and Newrelic user should be created as GitHub Secret
