--- a/.github/workflows/java-maven_starter_pipeline.yml
+++ b/.github/workflows/java-maven_starter_pipeline.yml
@@ -1,7 +1,7 @@
 name: Starter Pipeline for Java Maven Project using Github Packages
 on: 
  pull_request:
-    branches: [ testing-pipeline ]
+    branches: [ main ]
     types: [assigned, opened, synchronize, reopened]
     paths-ignore:
       - docs/**
